--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -36,6 +36,7 @@ spring:
         database: H2
         show-sql: true
         properties:
+            hibernate.ddl-auto: update
             hibernate.cache.use_second_level_cache: true
             hibernate.cache.use_query_cache: false
             hibernate.generate_statistics: true
