--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -44,8 +44,8 @@ spring:
     mail:
         host: smtp.gmail.com
         port: 587
-        username: vivien.le.breton@gmail.com  #Replace this field with your Gmail username.
-        password: cube7ds3wii94           #Replace this field with your Gmail password.
+        username: monMailAReplacer   #Replace this field with your Gmail username.
+        password: monPassAReplacer   #Replace this field with your Gmail password.
         protocol: smtp
         tls: true
         properties.mail.smtp:
